...
                                <rect key="frame" x="5" y="52" width="47" height="25"/>
                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                <state key="normal" title="backs" image="Screen Shot 2019-03-03 at 3.50.39 PM.png"/>
                                <connections>
                                    <action selector="HomePressed1:" destination="tjn-Pv-bHQ" eventType="touchUpInside" id="FBy-uM-MPj"/>
...
                                <color key="backgroundColor" red="0.8721204400062561" green="0.96081763505935669" blue="0.95250636339187622" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                <fontDescription key="fontDescription" type="boldSystem" pointSize="17"/>
                                <state key="normal" title="Login">
                                    <color key="titleColor" red="0.0" green="0.47843137250000001" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                </state>
...
                                <nil key="highlightedColor"/>
                            </label>
                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Password" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="pdP-tJ-pc8">
                                <rect key="frame" x="79" y="332" width="93" height="24"/>
                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
...
                                <nil key="highlightedColor"/>
                            </label>
                            <textField opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Enter Your Email" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="LbC-Tk-JOM">
                                <rect key="frame" x="79" y="287" width="216" height="30"/>
                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
...
                                <textInputTraits key="textInputTraits" textContentType="email"/>
                            </textField>
                            <textField opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Enter Your Password" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="OfW-Qf-yqm">
                                <rect key="frame" x="79" y="352" width="216" height="30"/>
                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
...
                                <rect key="frame" x="15" y="181" width="155" height="95"/>
                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                <state key="normal" title="AUNTY" image="Aunty's.png"/>
                                <connections>
                                    <action selector="ShinwaButtons:" destination="sho-ZC-Whg" eventType="touchUpInside" id="Nw0-VS-2l1"/>
...
                                <rect key="frame" x="205" y="181" width="155" height="95"/>
                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                <state key="normal" title="SHINWA" image="Shinwa.png"/>
                                <connections>
                                    <action selector="ShinwaMainButton:" destination="sho-ZC-Whg" eventType="touchUpInside" id="Gqb-qe-sO4"/>
...
                                <nil key="highlightedColor"/>
                            </label>
                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Shinwa" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="iEI-sz-keb">
                                <rect key="frame" x="205" y="277" width="155" height="30"/>
                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
...
                                <rect key="frame" x="4" y="58" width="51" height="26"/>
                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                <state key="normal" title="Button" image="Screen Shot 2019-03-03 at 3.50.39 PM.png"/>
                                <connections>
                                    <action selector="HomePressed2:" destination="sho-ZC-Whg" eventType="touchUpInside" id="pxU-fK-1c7"/>
                                </connections>
                            </button>
                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Kabob Hut" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Gwj-pe-ctY">
                                <rect key="frame" x="110" y="452" width="155" height="30"/>
                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
...
                                        </constraints>
                                        <fontDescription key="fontDescription" type="boldSystem" pointSize="15"/>
                                        <state key="normal" title="OPTIONS">
                                            <color key="titleColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                        </state>
...
                                        </constraints>
                                        <fontDescription key="fontDescription" type="boldSystem" pointSize="14"/>
                                        <state key="normal" title="News">
                                            <color key="titleColor" cocoaTouchSystemColor="darkTextColor"/>
                                        </state>
...
                                        </constraints>
                                        <fontDescription key="fontDescription" type="boldSystem" pointSize="14"/>
                                        <state key="normal" title="Social">
                                            <color key="titleColor" cocoaTouchSystemColor="darkTextColor"/>
                                        </state>
...
                                        </constraints>
                                        <fontDescription key="fontDescription" type="boldSystem" pointSize="14"/>
                                        <state key="normal" title="Locations">
                                            <color key="titleColor" cocoaTouchSystemColor="darkTextColor"/>
                                        </state>
...
                                <color key="backgroundColor" red="0.8721204400062561" green="0.96081763505935669" blue="0.95250636339187622" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                <fontDescription key="fontDescription" style="UICTFontTextStyleTitle0"/>
                                <state key="normal" title="All Deals">
